Dashboard - support new list buttons + fixes
- support new statistics button
- hide unused header button dropdown arrow
- fix history button being misaligned

--- a/Dashboard/Dashboard.css
+++ b/Dashboard/Dashboard.css
@@ -2,7 +2,7 @@
  * List design by 5cm
  * Modified by Valerio Lyndon
  * Original date: 2020-JUL-28
- * Revision date: 2022-JUN-22
+ * Revision date: 2023-OCT-09
  */
 
 @\import "https://fonts.googleapis.com/css?family=Source+Sans+Pro";
@@ -73,6 +73,10 @@ a {color: black;}
 .anime #header-menu-button:before {background: left/cover url(https://s6.postimg.cc/46qmpa1m9/blackanime.png);}
 .manga #header-menu-button:before {background: left/cover url(https://s6.postimg.cc/3tz8j33wx/blackmanga.png);}
 
+#header-menu-button i {
+	display: none;
+}
+
 .header a, .header .header-menu .list-menu .icon-menu {display: block; width: 160px; height: 50px; transition: none;}
 
 .header .header-menu .list-menu {top: 100px; left: 0; background: none; display: block!important; border: 0; box-shadow: none;}
@@ -80,6 +84,9 @@ a {color: black;}
 .header .header-menu .list-menu .icon-menu .text {left: 48px; top: 0; font-size: 11px; color: #999;}
 
 .header-info [href*=shared]:before {font: 14px FontAwesome; content: '\f0ec'; padding: 0 11px 0 20px;}
+.header-info a i {
+	padding: 0 11px 0 20px;
+}
 
 .fa.fa-history {padding: 0 6px 0 21px; font-size: 16px;}
 
